--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -2,6 +2,7 @@
     padding-top: 86px;
     padding-bottom: 320px;
     background-color: $white-color;
+    overflow: hidden;
 
     @media screen and (min-width: $tablet) {
         padding-top: 60px;
